Pagina index finalizada

--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
         </header>
 
         <nav class="nav">
-            <a class="nav-link" href="# ">HOME</a>
-            <a class="nav-link" href="#">BIOGRAFIA</a>
-            <a class="nav-link" href="#">CAMPANHAS PUBLICITARIAS</a>
-            <a class="nav-link" href="#">CONTATOS</a>
+            <a class="nav-link" href="./index.html">HOME</a>
+            <a class="nav-link" href="./pages/bio.html">BIOGRAFIA</a>
+            <a class="nav-link" href="./pages/camopublica.html">CAMPANHAS PUBLICITARIAS</a>
+            <a class="nav-link" href="./pages/contato.html">CONTATOS</a>
         </nav>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sequi odio nisi ut magni id maxime modi incidunt, aperiam nostrum, sint repudiandae nulla dolore? Aliquid soluta officiis inventore vitae. Sequi?
+
+        <main>
+            <h1>Sobre Darth Vader</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum delectus dolore, voluptate itaque perferendis odio doloribus! A quos alias ipsa eum id eos dolorem aliquam pariatur? Delectus voluptatibus sit laborum.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia distinctio labore aliquam est consequatur itaque ipsam ratione similique rem! Enim, molestiae maxime molestias et voluptatum quo vitae. In, magni perferendis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda perferendis non inventore excepturi cumque, quasi, explicabo esse possimus, nemo libero unde accusamus rem debitis asperiores enim in tempora dolorem fugiat.</p>
+        </main>
+
+        <footer>
+            <p>Todos direitos reservados</p>
+        </footer>
+
+
     </div>
 </body>
 </html>
