--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         </header>
 
         <nav class="nav">
-            <a class="nav-link" href="./index.html">HOME</a>
+            <a class="nav-link" href="../index.html">HOME</a>
             <a class="nav-link" href="./pages/bio.html">BIOGRAFIA</a>
             <a class="nav-link" href="./pages/camopublica.html">CAMPANHAS PUBLICITARIAS</a>
             <a class="nav-link" href="./pages/contato.html">CONTATOS</a>
         </nav>
-        
+
 
         <main>
             <h1>Sobre Darth Vader</h1>
