--- a/pages/camopublica.html
+++ b/pages/camopublica.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Darth Veider</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <img src="./imagens/capa.jpg" alt="">
+        </header>
+
+        <nav class="nav">
+            <a class="nav-link" href="../index.html">HOME</a>
+            <a class="nav-link" href="./pages/bio.html">BIOGRAFIA</a>
+            <a class="nav-link" href="./pages/camopublica.html">CAMPANHAS PUBLICITARIAS</a>
+            <a class="nav-link" href="./pages/contato.html">CONTATOS</a>
+        </nav>
+
+
+        <main>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum delectus dolore, voluptate itaque perferendis odio doloribus! A quos alias ipsa eum id eos dolorem aliquam pariatur? Delectus voluptatibus sit laborum.</p>
+            <img src="../imagens/foto1.jpg" alt="">
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora dolorem quae, ipsam nam ipsa tenetur libero, ducimus, expedita explicabo nesciunt eius fuga? Ea, praesentium eum eos quo magni ipsam!</p>
+            <img src="../imagens/foto2.jpg" alt="">
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi officia ad, deleniti voluptatem deserunt quae, at modi nulla atque necessitatibus ipsum in omnis, error quas fuga quaerat assumenda ea iste.
+                <img src="../imagens/foto3.jpg" alt="">
+            </p>
+        </main>
+
+        <footer>
+            <p>Todos direitos reservados</p>
+        </footer>
+
+
+    </div>
 </body>
 </html>
